products list page, adding products is done, orders is done, routing is fixed,

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       href="assets/images/dashboard/favicon.png"
       type="image/x-icon"
     />
-    <title>Multikart - Premium Admin Template</title>
+    <title>Irentout admin</title>
     <base href="/" />
     <!--Google font-->
     <link
