--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="pixelstrap" />
     <link
       rel="icon"
-      href="assets/images/dashboard/favicon.png"
+      href="favicon.ico"
       type="image/x-icon"
     />
     <title>Irentout admin</title>
