notifications done, eKYC done

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="universal admin is super flexible, powerful, clean & modern responsive bootstrap 4 admin template with unlimited possibilities."
+      content=""
     />
     <meta
       name="keywords"
-      content="admin template, universal admin template, dashboard template, flat admin template, responsive admin template, web app"
+      content=""
     />
-    <meta name="author" content="pixelstrap" />
+    <meta name="author" content="irentout.com" />
     <link
       rel="icon"
       href="favicon.ico"
