Addres auth roles

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       type="image/x-icon"
     />
     <title>Irentout admin</title>
-    <base href="/" />
+    <base href="/iroadmin/" />
     <!--Google font-->
     <link
       href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900"
